feat: implement new landing page and refactor app flow
- Add new main landing page as the primary site entry point.
- Move the core video conferencing application to /app.html.
- Update 'Get Started' CTA to link to the new app page.
- Improve responsiveness of the landing page container.
- Update footer with correct foundation name.

--- a/main-landing-page.html
+++ b/main-landing-page.html
@@ -163,7 +163,7 @@
 
     <div class="relative min-h-screen w-full flex flex-col items-center justify-center px-4 z-10 pt-24">
         
-        <main class="w-full max-w-6xl mx-auto text-center py-20">
+        <main class="container mx-auto text-center py-20">
             <!-- Hero Section -->
             <section class="flex flex-col items-center">
                 <h1 class="font-poppins text-5xl md:text-7xl font-extrabold leading-tight fade-in-up bg-gradient-to-r from-pink-500 to-orange-500 bg-clip-text text-transparent" style="animation-delay: 0.1s;">
@@ -224,7 +224,7 @@
             
             <!-- Final CTA -->
             <section class="mt-20 fade-in-up" style="animation-delay: 0.6s;">
-                <a href="/app.html" class="pulse-zoom inline-flex items-center bg-gradient-to-r from-pink-500 to-orange-500 text-white font-semibold px-8 py-4 rounded-lg shadow-xl hover:shadow-2xl transition-all transform hover:scale-105">
+                <a href="#" class="pulse-zoom inline-flex items-center bg-gradient-to-r from-pink-500 to-orange-500 text-white font-semibold px-8 py-4 rounded-lg shadow-xl hover:shadow-2xl transition-all transform hover:scale-105">
                      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
                     </svg>
@@ -237,7 +237,7 @@
         <!-- Footer -->
         <footer class="w-full text-center p-6 text-gray-600 fade-in-up" style="animation-delay: 0.7s;">
              <!-- TYPOGRAPHY UPDATE: Increased font size for better legibility -->
-            <p class="text-base">Built by Your Friends at ADEA Foundation for Maasai Students © 2025 TalkTime</p>
+            <p class="text-base">Built by Your Friends at NICA Foundation for Maasai Students © 2025 TalkTime</p>
             <p class="text-base">Empowering Through Conversation</p>
         </footer>
     </div>
